src/content_scripts/style.css
xmetword {
    position: relative !important;
	z-index: 0 !important;
	display: inline !important;
	text-indent: 0 !important;
}

xmetword::before {
    content: attr(data-times) !important;
    color: var(--met-color) !important;
    position: absolute !important;
    z-index: -7671 !important;
    line-height: 3px !important;
	height: 2px !important;
	font-family:'Courier New', Courier, monospace !important;
	display: inline-block !important;
	width: 100% !important;
	left: 0% !important;
	top: 100% !important;
	text-align: left !important;
	overflow: hidden !important;
	text-overflow: clip !important;
}

.metwords-word {
	text-align: left !important;
	font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
	-webkit-font-smoothing: antialiased !important;
	font-size: 14px !important;
	font-weight: 400 !important;
}

xmet {
	font-weight: 600 !important;
}

.metwords-phonetics {
	font-size: 14px !important;
	line-height: 1.4em !important;
	margin: 10px 0px !important;
	display: block !important;
}

.metwords-phonetic-label {
	font-size: 14px !important;
	margin-right: 6px !important;
}

.metwords-phonetic {
	font-size: 14px !important;
	margin-right: 8px !important;
}

.metwords-defs {
	margin-bottom: 10px !important;
	font-size: 13px !important;
}

.metwords-defs ul {
	all: unset !important;
	list-style-type: none !important;
	max-width: max-content !important;
	padding-left: 0px !important;
}

.metwords-defs ul li {
	all: unset !important;
	list-style-type: none !important;
	line-height: 1.2em !important;
	margin-bottom: 4px !important;
	display: block !important;
}

.metwords-explain {
	font-size: 13px !important;
}

.metwords-times {
	line-height: 1.2em !important;
	font-size: 14px !important;
	background-color: black !important;
	color: white !important;
	margin-bottom: 10px !important;
}

.metwords-scenes {
	padding-left: 1px !important;
	font-weight: 400 !important;
}

.metwords-scenes ul {
	all: unset !important;
	font-size: 13px !important;
	padding-left: 0px !important;
}

.metwords-scenes ul li {
	all: unset !important;
	display: list-item !important;
	list-style-position: inside !important;
	list-style-type: circle !important;
	line-height: 1.2em !important;
	margin: 4px 0px !important;
}

.metwords-scene {
	font-size: 13px !important;
}

.metwords-scenes a {
	all: unset !important;
	text-decoration: none !important;
	font-size: 13px !important;
	color: rgb(50, 49, 48) !important;
}

.metwords-scenes a:hover {
	all: unset !important;
	cursor: pointer !important;
	text-decoration: none !important;
	color: rgb(50, 49, 48) !important;
}

.metwords-forget {
	font-size: 14px !important;
	opacity: 0 !important;
	padding: 1px 10px !important;
}

.metwords-forget:hover {
	font-size: 14px !important;
	opacity: 100 !important;
	cursor: pointer !important;
}

.metwords-message {
	display: block !important;
	padding: 10px 10px !important;
	font-size: 16px !important;
	line-height: 1.2em !important;
}

.metwords-message a {
	all: unset !important;
	font-size: 16px !important;
	cursor: pointer !important;
	color: #0000EE !important;
	text-decoration: solid underline !important;
	text-underline-position: under !important;
}

.metwords-message a:hover,
.metwords-message a:visited {
	color: #551A8B !important;
}

